# Comms

./: CMakeLists.txt  CommsConfig.cmake  README.md  __clang_format.sh  conanfile.txt  install.sh  run.sh
common/: common.h  example.pb.cc  example.proto
comms_client/: CMakeLists.txt  README.md
comms_client/src/: comm_client.cpp  comm_client.h
comms_lib/: CMakeLists.txt
comms_lib/protocol/: iprotocol.h
comms_lib/protocol/tcpip/: tcpip.cpp  tcpip.h
comms_lib/src/: comms.cpp  comms.h  iprotocol.h
comms_rec/: CMakeLists.txt
comms_rec/src/: main.cpp
comms_send/: CMakeLists.txt
comms_send/src/: main.cpp
comms_server/: CMakeLists.txt  README.md
comms_server/src/: comm_server.cpp  comm_server.h
doc/: Doxyfile
doc/StartUML/: Comms.mdj
doc/drawio/: comms
doc/html/: annotated.html  basic_8h_source.html  classCCommClient-members.html  classCCommClient.html  classCCommClient__coll__graph.dot  classCCommClient__coll__graph.map  classCCommClient__coll__graph.md5  classCCommServer-members.html  classCCommServer.html  classCCommServer__coll__graph.map  classCCommServer__coll__graph.md5  classIProtocolClient-members.html  classIProtocolClient.html  classIProtocolClient__coll__graph.map  classIProtocolClient__coll__graph.md5  classIProtocolClient__inherit__graph.dot  classIProtocolClient__inherit__graph.map  classIProtocolClient__inherit__graph.md5  classIProtocolServer-members.html  classIProtocolServer.html  classIProtocolServer__coll__graph.map  classIProtocolServer__coll__graph.md5  classIProtocolServer__inherit__graph.dot  classIProtocolServer__inherit__graph.map  classIProtocolServer__inherit__graph.md5  classISerialiser-members.html  classISerialiser.html  classISerialiser__coll__graph.map  classISerialiser__coll__graph.md5  classISerialiser__inherit__graph.dot  classISerialiser__inherit__graph.map  classISerialiser__inherit__graph.md5  classPROTOBUF__FINAL-members.html  classPROTOBUF__FINAL.html  classPROTOBUF__FINAL__coll__graph.map  classPROTOBUF__FINAL__inherit__graph.dot  classPROTOBUF__FINAL__inherit__graph.md5  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient-members.html  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient.html  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient__coll__graph.dot  (+217 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
doc/latex/: annotated.tex  classCCommClient.tex  classCCommClient.tex.tmp  classCCommServer.tex  classCCommServer__coll__graph.dot  classIProtocolClient.eps  classIProtocolClient.tex  classIProtocolClient.tex.tmp  classIProtocolClient__coll__graph.dot  classIProtocolClient__inherit__graph.dot  classIProtocolServer.eps  classIProtocolServer.tex  classIProtocolServer__coll__graph.dot  classIProtocolServer__inherit__graph.dot  classISerialiser.eps  classISerialiser.tex  classISerialiser__coll__graph.dot  classISerialiser__inherit__graph.dot  classPROTOBUF__FINAL.eps  classPROTOBUF__FINAL.tex  classPROTOBUF__FINAL__inherit__graph.dot  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient.eps  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient.tex  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient__coll__graph.dot  classcomms_1_1posix_1_1client_1_1CPOSIXMQClient__inherit__graph.dot  classcomms_1_1posix_1_1helper_1_1CPOSIXMQHelper.eps  classcomms_1_1posix_1_1helper_1_1CPOSIXMQHelper.tex  classcomms_1_1posix_1_1helper_1_1CPOSIXMQHelper__coll__graph.dot  classcomms_1_1posix_1_1helper_1_1CPOSIXMQHelper__inherit__graph.dot  classcomms_1_1posix_1_1server_1_1CPOSIXMQServer.eps  classcomms_1_1posix_1_1server_1_1CPOSIXMQServer.tex  classcomms_1_1posix_1_1server_1_1CPOSIXMQServer__coll__graph.dot  classcomms_1_1posix_1_1server_1_1CPOSIXMQServer__inherit__graph.dot  classcomms_1_1serial_1_1protobuf_1_1CSerialiserHelper.eps  classcomms_1_1serial_1_1protobuf_1_1CSerialiserHelper.tex  classcomms_1_1serial_1_1protobuf_1_1CSerialiserHelper__inherit__graph.dot  classcomms_1_1tcpip_1_1client_1_1CTCPIPClient.eps  classcomms_1_1tcpip_1_1client_1_1CTCPIPClient.tex  classcomms_1_1tcpip_1_1client_1_1CTCPIPClient__coll__graph.dot  classcomms_1_1tcpip_1_1client_1_1CTCPIPClient__inherit__graph.dot  (+24 more)
messages/: CMakeLists.txt  README.md  example.pb.cc  example.pb.h  example.proto
messages/src/: example.proto
protocol/: iprotocol_client.h  iprotocol_server.h
protocol/posix_mq/: posix_mq_client.cpp  posix_mq_client.h  posix_mq_helper.cpp  posix_mq_helper.h  posix_mq_server.cpp  posix_mq_server.h
protocol/tcpip/: tcpip_client.cpp  tcpip_client.h  tcpip_common.cpp  tcpip_common.h  tcpip_helper.cpp  tcpip_helper.h  tcpip_server.cpp  tcpip_server.h
serialiser/: iserialiser.h
serialiser/basic/: basic.cpp  basic.h
serialiser/protobuf/: proto_helper.cpp  proto_helper.h
test/: CMakeLists.txt
test/src/: client_main.cpp  common.h  main.cpp  server_main.cpp  tcpip.cpp  test.cpp  test_posix.cpp  test_posixmq.cpp  test_tcpip.cpp  test_tcpip_client.cpp  test_tcpip_server.cpp
